Pushing the updated code on Github

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import '../node_modules/@syncfusion/ej2-base/styles/bootstrap.css';  
+@import '../node_modules/@syncfusion/ej2-buttons/styles/bootstrap.css';  
+@import '../node_modules/@syncfusion/ej2-calendars/styles/bootstrap.css';  
+@import '../node_modules/@syncfusion/ej2-dropdowns/styles/bootstrap.css';  
+@import '../node_modules/@syncfusion/ej2-inputs/styles/bootstrap.css';  
+@import '../node_modules/@syncfusion/ej2-navigations/styles/bootstrap.css';
+@import '../node_modules/@syncfusion/ej2-popups/styles/bootstrap.css';
+@import '../node_modules/@syncfusion/ej2-splitbuttons/styles/bootstrap.css';
+@import "../node_modules/@syncfusion/ej2-react-grids/styles/bootstrap.css";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
