--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,170 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: content-box;
+  margin:0;
+  padding:0;
+  text-decoration: none;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body, #root{
+  height:100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1{
+  font-size: 40px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+p, label, span{
+  font-size:16px;
+  color:#595454;
+}
+.container{
+  max-width:1280px;
+  width:100%;
+  margin:auto;
+  padding:30px 15px;
+}
+.h-100{
+  height:100%;
+}
+.mb-10{
+  margin:0 0 10px;
+}
+.mb-20{
+  margin:0 0 20px;
+}
+.d-flex{
+  display:flex;
+}
+.gap-20{
+  gap:20px;
+}
+.flex-center{
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.text-start{
+  text-align: left;
+}
+button{
+  border:none;
+  background:rgb(0 103 130/1);
+  color:#ffffff;
+  padding:15px 10px;
+  display:block;
+  max-width:100px;
+  font-size:16px;
+  width:100%;
+  cursor: pointer;
+}
+a.xs{
+  width: 40px;
+  padding:10px;
+  font-size:14px;
+  background:url('https://img.icons8.com/material-sharp/344/visible.png') no-repeat center center;
+  background-size: 20px;
+  display: block;
+}
+/* Login */
+.form{
+  max-width: 400px;
+  width:100%;
+}
+.form-group{
+  margin:0 0 20px;
+  width:100%
+}
+label:not([for="remember"]){
+  display:block;
+}
+input:not([type="checkbox"]){
+  outline:none;
+  height:45px;
+  margin:10px 0 0;
+  padding-left:20px;
+  border-radius: 5px;
+  border:1px solid #a3a3a3;
+  width:inherit
+}
+.error{
+  color:red;
+  font-size:14px;
+  margin:5px 0 0;
+}
+.remember-box{
+  display: flex;
+  gap:5px;
+}
+.remember-box label{
+  line-height: 1;
+}
+/* Listing */
+.name-cell{
+  cursor: pointer;
+}
+table{
+  border-spacing: 0;
+}
+th, td{
+  border:1px solid black;
+  text-align: left;
+  padding:10px 30px 10px 10px;
+  margin:0;
+}
+table img{
+  object-fit: contain;
+}
+table th{
+  background: rgb(0 103 130/1)
+}
+/* Loader */
+.loader {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid rgb(0 103 130/1);
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  animation: spin 2s linear infinite;
+}
+.loader.xs{
+  height: 14px;
+  width: 14px;
+  border: 2px solid #f3f3f3;
+  border-top: 2px solid rgb(0 103 130/1);
+  animation: spin 1s linear infinite;
+  display: block;
+  margin: auto;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Header */
+header{
+  background:rgb(0 103 130/1);
+}
+header ul{
+  list-style: none;
+  display: flex;
+  align-items: baseline;
+  gap:30px;
+}
+header li, header ul a, .logo{
+  color:#ffffff;
+}
+.logo{
+  font-weight: bold;
+  font-size:20px;
+}
+header .container{
+  justify-content: space-between;
+}
+header button{
+  padding:0;
+  width:inherit;
+}
+.error-component{
+  position:fixed;
+  top:0;
+  left:0;
+  height: 100%;
+  width:100%;
 }
